--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
             background-color: #B8860B;
             border-color: #B8860B;
         }
-        /* Nouveau style pour la section partenaires */
         .partner-logos {
             text-align: center;
             padding: 40px 0;
@@ -364,7 +363,6 @@
             </div>
         </div>
 
-        <!-- Nouvelle section Nos Partenaires -->
         <div class="partner-logos">
             <span>Nos partenaires</span>
             <a href="https://www.lbank.com/" target="_blank" aria-label="Logo LBank" alt="Logo LBank">
@@ -492,7 +490,6 @@
         </div>
     </footer>
 
-    <!-- Modale pour la capture de leads -->
     <div id="demo-modal" class="modal">
         <div class="modal-content">
             <span class="close-modal" id="close-demo-modal">×</span>
@@ -517,7 +514,6 @@
         </div>
     </div>
 
-    <!-- Balisage Schema.org pour FAQ -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -555,7 +551,7 @@
         let livePrices = {
             'bitcoin': 0,
             'pax-gold': 0,
-            'silver-token-xagx': 0, // Remplacement de slv-token par silver-token-xagx
+            'silver-token-xagx': 0,
             'immobilier': 1000
         };
 
@@ -563,20 +559,13 @@
             try {
                 const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,pax-gold,silver-token-xagx&vs_currencies=usd');
                 const data = await response.json();
-                
-                // Récupération et validation des prix
+                console.log("Données brutes de CoinGecko :", data);
+
                 livePrices['bitcoin'] = data['bitcoin']?.usd || 0;
                 livePrices['pax-gold'] = data['pax-gold']?.usd || 0;
                 livePrices['silver-token-xagx'] = data['silver-token-xagx']?.usd || 0;
 
-                // Log pour débogage
-                console.log('Prix récupérés de CoinGecko:', livePrices);
-
-                // Vérification spécifique pour l'argent
-                if (livePrices['silver-token-xagx'] === 0) {
-                    console.warn("Prix de silver-token-xagx non disponible. Vérifiez si le token est listé sur CoinGecko.");
-                }
-
+                console.log("livePrices mis à jour :", livePrices);
                 updatePriceDisplay();
             } catch (error) {
                 console.error('Erreur lors de la récupération des prix:', error);
@@ -597,7 +586,6 @@
                 ? 'Argent: Prix indisponible' 
                 : `Argent: $${livePrices['silver-token-xagx'].toLocaleString('fr-FR', { maximumFractionDigits: 2 })} / oz`;
             
-            // Animation GSAP pour un effet fluide
             gsap.from(".crypto-prices p", { opacity: 0, duration: 0.5, stagger: 0.1 });
             updateCollateralPrice();
         }
@@ -611,17 +599,27 @@
         }
 
         function calculateLoan() {
+            console.log("calculateLoan() appelé");
             const collateralType = document.getElementById('collateral-type').value;
+            console.log("Type de collatéral :", collateralType);
             const collateralAmount = parseFloat(document.getElementById('collateral-amount').value) || 0;
             const loanDuration = parseFloat(document.getElementById('loan-duration').value) || 0;
             const interestRate = parseFloat(document.getElementById('interest-rate').value) || 0;
-            const collateralValue = collateralAmount * livePrices[collateralType];
+            console.log("Valeurs saisies :", { collateralAmount, loanDuration, interestRate });
+
+            const collateralValue = collateralAmount * (livePrices[collateralType] || 0);
+            console.log("Valeur du collatéral :", collateralValue);
+            if (!livePrices[collateralType]) {
+                console.warn("Prix pour", collateralType, "non disponible. Vérifiez fetchLivePrices().");
+            }
+
             const ltv = 0.7;
             const loanAmount = collateralValue * ltv;
             const monthlyInterestRate = interestRate / 100 / 12;
             const monthlyPayment = (loanAmount * monthlyInterestRate) / (1 - Math.pow(1 + monthlyInterestRate, -loanDuration));
             const totalPayment = monthlyPayment * loanDuration;
             const totalInterest = totalPayment - loanAmount;
+            console.log("Résultats calculés :", { loanAmount, monthlyPayment, totalPayment, totalInterest });
 
             document.getElementById('ltv-value').textContent = `${(ltv * 100).toFixed(0)}%`;
             const resultsDiv = document.getElementById('loan-results');
@@ -639,47 +637,214 @@
             }
         }
 
-   async function connectMetaMask() {
-    const connectButton = document.getElementById('connect-metamask');
-    const loadingSpinner = document.getElementById('loading-spinner');
-    const errorMessage = document.getElementById('error-message');
+        async function connectMetaMask() {
+            const connectButton = document.getElementById('connect-metamask');
+            const loadingSpinner = document.getElementById('loading-spinner');
+            const walletAddress = document.getElementById('wallet-address');
+            const networkStatus = document.getElementById('network-status');
+            const errorMessage = document.getElementById('error-message');
 
-    errorMessage.classList.add('hidden');
-    console.log("Tentative de connexion à MetaMask...");
+            walletAddress.classList.add('hidden');
+            networkStatus.classList.add('hidden');
+            errorMessage.classList.add('hidden');
 
-    if (!window.ethereum) {
-        console.error("MetaMask non détecté");
-        errorMessage.textContent = "MetaMask n’est pas détecté.";
-        errorMessage.classList.remove('hidden');
-        return;
-    }
+            console.log("Étape 1 : Vérification de window.ethereum...");
+            if (!window.ethereum) {
+                console.error("MetaMask non détecté : window.ethereum est undefined");
+                errorMessage.classList.remove('hidden');
+                errorMessage.textContent = "MetaMask n’est pas détecté. Veuillez vérifier que l’extension est installée et activée.";
+                return;
+            }
 
-    try {
-        loadingSpinner.classList.remove('hidden');
-        connectButton.disabled = true;
-        console.log("Demande de connexion à MetaMask...");
-        const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        console.log("Comptes récupérés :", accounts);
-        if (accounts.length > 0) {
-            const account = accounts[0];
-            document.getElementById('wallet-address').textContent = `Adresse connectée : ${account.slice(0, 6)}...${account.slice(-4)}`;
-            document.getElementById('wallet-address').classList.remove('hidden');
-            connectButton.textContent = 'MetaMask Connecté';
-        } else {
-            throw new Error("Aucun compte retourné par MetaMask.");
+            console.log("Étape 2 : Vérification de MetaMask...");
+            if (!window.ethereum.isMetaMask) {
+                console.error("L'objet window.ethereum n'est pas MetaMask");
+                errorMessage.classList.remove('hidden');
+                errorMessage.textContent = "L’extension détectée n’est pas MetaMask. Veuillez utiliser MetaMask.";
+                return;
+            }
+
+            try {
+                console.log("Étape 3 : Lancement de la connexion...");
+                loadingSpinner.classList.remove('hidden');
+                connectButton.disabled = true;
+
+                console.log("Étape 4 : Vérification des comptes existants...");
+                let accounts = await window.ethereum.request({ method: 'eth_accounts' });
+                console.log("Comptes détectés via eth_accounts :", accounts);
+
+                if (accounts.length === 0) {
+                    console.log("Étape 5 : Demande de connexion via eth_requestAccounts...");
+                    accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+                    console.log("Comptes retournés par eth_requestAccounts :", accounts);
+                }
+
+                if (accounts.length === 0) {
+                    throw new Error("Aucun portefeuille actif trouvé ou autorisation refusée.");
+                }
+
+                const account = accounts[0];
+                walletAddress.classList.remove('hidden');
+                walletAddress.textContent = `Adresse connectée : ${account.slice(0, 6)}...${account.slice(-4)}`;
+
+                console.log("Étape 6 : Vérification du réseau...");
+                const chainId = await window.ethereum.request({ method: 'eth_chainId' });
+                console.log("Chain ID détecté :", chainId);
+                if (chainId !== '0xa4b1') {
+                    networkStatus.classList.remove('hidden');
+                    networkStatus.textContent = 'Veuillez passer au réseau Arbitrum pour continuer.';
+                    walletAddress.classList.add('hidden');
+                } else {
+                    networkStatus.classList.add('hidden');
+                    connectButton.textContent = 'MetaMask Connecté';
+                }
+            } catch (error) {
+                console.error('Erreur détaillée lors de la connexion à MetaMask:', error);
+                errorMessage.classList.remove('hidden');
+                if (error.code === 4001) {
+                    errorMessage.textContent = 'Connexion refusée : Vous avez annulé la demande de connexion.';
+                } else if (error.code === -32002) {
+                    errorMessage.textContent = 'Une demande de connexion est déjà en cours. Vérifiez MetaMask et acceptez la demande.';
+                    setTimeout(() => connectMetaMask(), 2000);
+                } else if (error.message.includes("Aucun portefeuille actif trouvé") || error.message.includes("User denied account authorization")) {
+                    errorMessage.textContent = 'Aucun portefeuille actif trouvé. Veuillez déverrouiller MetaMask, accepter la demande de connexion dans le pop-up, ou importer un portefeuille.';
+                } else {
+                    errorMessage.textContent = `Erreur : ${error.message || 'Problème inconnu lors de la connexion à MetaMask.'}`;
+                }
+            } finally {
+                loadingSpinner.classList.add('hidden');
+                connectButton.disabled = false;
+            }
         }
-    } catch (error) {
-        console.error("Erreur détaillée :", error);
-        errorMessage.textContent = `Erreur : ${error.message || 'Problème inconnu lors de la connexion.'}`;
-        errorMessage.classList.remove('hidden');
-        if (error.code === 4001) {
-            errorMessage.textContent = 'Connexion refusée : Vous avez peut-être annulé dans MetaMask.';
-        } else if (error.code === -32002) {
-            errorMessage.textContent = 'Demande en cours. Vérifiez MetaMask ou réessayez.';
-            setTimeout(() => connectMetaMask(), 2000);
+
+        async function swapLEG() {
+            if (document.getElementById('connect-metamask').textContent !== 'MetaMask Connecté') {
+                alert('Connectez d’abord votre wallet !');
+                return;
+            }
+            const amount = document.getElementById('swap-amount').value;
+            document.getElementById('swap-result').textContent = `Échange de ${amount} ETH en cours... (API à implémenter)`;
         }
-    } finally {
-        loadingSpinner.classList.add('hidden');
-        connectButton.disabled = false;
-    }
-}
+
+        function requestLoan() {
+            const connectButton = document.getElementById('connect-metamask');
+            if (connectButton.textContent === 'MetaMask Connecté') {
+                alert('Demande de prêt initiée ! Vérifiez votre portefeuille MetaMask pour confirmer la transaction.');
+            } else {
+                alert('Veuillez connecter MetaMask avant de demander un prêt.');
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", () => {
+            console.log("DOMContentLoaded exécuté");
+            fetchLivePrices();
+            setInterval(() => { fetchLivePrices(); updatePriceDisplay(); }, 60000);
+            document.getElementById('collateral-type').addEventListener('change', updateCollateralPrice);
+            document.getElementById('connect-metamask').addEventListener('click', connectMetaMask);
+            const calculateButton = document.querySelector('button[onclick="calculateLoan()"]');
+            if (calculateButton) {
+                console.log("Bouton Calculer trouvé");
+            } else {
+                console.error("Bouton Calculer non trouvé !");
+            }
+
+            gsap.from(".section", { opacity: 0, y: 50, duration: 1, stagger: 0.3, scrollTrigger: { trigger: ".section", start: "top 90%", toggleActions: "play none none reverse" } });
+            const buttons = document.querySelectorAll('.cta-button');
+            buttons.forEach(button => {
+                button.addEventListener('click', () => {
+                    gsap.to(button, { scale: 1.1, duration: 0.3, yoyo: true });
+                });
+            });
+
+            document.querySelector('.back-to-top').addEventListener('click', () => {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
+            });
+
+            const modal = document.getElementById('demo-modal');
+            const openModalBtn = document.getElementById('open-demo-modal');
+            const closeModalBtn = document.getElementById('close-demo-modal');
+            const form = document.getElementById('demo-form');
+            const formMessage = document.getElementById('form-message');
+
+            openModalBtn.addEventListener('click', (e) => {
+                e.preventDefault();
+                modal.style.display = 'block';
+                gsap.fromTo(modal, { opacity: 0, scale: 0.9 }, { opacity: 1, scale: 1, duration: 0.3 });
+            });
+
+            closeModalBtn.addEventListener('click', () => {
+                gsap.to(modal, { opacity: 0, scale: 0.9, duration: 0.3, onComplete: () => {
+                    modal.style.display = 'none';
+                    formMessage.style.display = 'none';
+                    form.reset();
+                } });
+            });
+
+            window.addEventListener('click', (e) => {
+                if (e.target === modal) {
+                    gsap.to(modal, { opacity: 0, scale: 0.9, duration: 0.3, onComplete: () => {
+                        modal.style.display = 'none';
+                        formMessage.style.display = 'none';
+                        form.reset();
+                    } });
+                }
+            });
+
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const formData = new FormData(form);
+                try {
+                    const response = await fetch(form.action, {
+                        method: 'POST',
+                        body: formData,
+                        headers: { 'Accept': 'application/json' }
+                    });
+                    if (response.ok) {
+                        formMessage.style.display = 'block';
+                        formMessage.style.color = '#2c3e50';
+                        formMessage.textContent = 'Merci ! Nous vous contacterons bientôt.';
+                        form.reset();
+                    } else {
+                        formMessage.style.display = 'block';
+                        formMessage.style.color = '#e74c3c';
+                        formMessage.textContent = 'Une erreur s’est produite. Veuillez réessayer.';
+                    }
+                } catch (error) {
+                    formMessage.style.display = 'block';
+                    formMessage.style.color = '#e74c3c';
+                    formMessage.textContent = 'Une erreur s’est produite. Veuillez réessayer.';
+                }
+            });
+
+            document.getElementById('subscribe-form').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const formData = new FormData(e.target);
+                const subscribeMessage = document.getElementById('subscribe-message');
+                try {
+                    const response = await fetch(e.target.action, {
+                        method: 'POST',
+                        body: formData,
+                        headers: { 'Accept': 'application/json' }
+                    });
+                    if (response.ok) {
+                        subscribeMessage.style.display = 'block';
+                        subscribeMessage.textContent = 'Merci ! Vous êtes inscrit.';
+                        e.target.reset();
+                    } else {
+                        const errorData = await response.json().catch(() => ({ error: `Erreur HTTP ${response.status}: ${response.statusText}` }));
+                        console.error('Erreur Formspree:', errorData);
+                        subscribeMessage.style.display = 'block';
+                        subscribeMessage.style.color = '#e74c3c';
+                        subscribeMessage.textContent = `Erreur : ${errorData.error || `Code ${response.status} - ${response.statusText}. Vérifiez votre compte Formspree.`}`;
+                    }
+                } catch (error) {
+                    console.error('Erreur réseau ou CORS:', error);
+                    subscribeMessage.style.display = 'block';
+                    subscribeMessage.style.color = '#e74c3c';
+                    subscribeMessage.textContent = `Erreur : ${error.message || 'Problème de connexion. Vérifiez la console.'}`;
+                }
+            });
+        });
+    </script>
+</body>
+</html>
